# lulo

./: .env.test  .gitignore  Cargo.toml  README.md  book.md  ideas.md  ideas.yaml  readme_todo.md  test.yaml  todo.md
book/: book.toml
book/book/: 1_1_a_new_kind_of_language.html  1_2_fancy_types.html  1_3_data_stores.html  1_what_is_a_data_language.html  2_1_schemas.html  2_2_schemas.html  2_3_schemas.html  2_databases_hl.html  3_1_schemas.html  3_2_schemas.html  3_databases_ml.html  404.html  4_databases_ll.html  5_1_values.html  5_2_changes.html  5_3_types.html  5_4_schemas.html  5_type_system.html  6_1_changes.html  6_2_changes.html  6_example_applications.html  7_operational_languages.html  index.html  print.html  searchindex.js  searchindex.json
book/src/: 1_1_a_new_kind_of_language.md  1_2_fancy_types.md  1_3_data_stores.md  1_what_is_a_data_language.md  2_databases_hl.md  3_databases_ml.md  3_storage_engines.md  4_databases_ll.md  6_1_changes.md  6_operational_languages.md  SUMMARY.md
data/schemas/: rpg.yaml
data/values/: dog.yaml
examples/schemas/: rpg.yaml
src/: is_type.rs  lib.rs  luloschema.rs  main.rs  mapping.rs  uri.rs  validate.rs
src/api/: mod.rs  uri.rs
src/atom/: README.md  change.rs  mod.rs  schema.rs  typ.rs  value.rs
src/cli/: command.rs  error.rs  mod.rs  schema.rs
src/lib/: db.rs
src/object/: mod.rs  schema.rs
src/types/: change.rs  mod.rs  schema.rs  value.rs
src/uri/: common.rs  mod.rs
src/v1/: mod.rs  schema.rs  typ.rs  (+1 more)
tests/: README.md  common.rs  config.rs  gen.rs  schema.rs  uri.rs  uri_fetch.rs  validate.rs
(+53 files in other folders)
