[package]
name = "lulo"
version = "0.1.0"
authors = ["Jeff Wise <jeff.scott.wise@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
yaml-rust = "0.4"
itertools = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
http = "0.2.4"
dotenv = "0.15.0"
envy = "0.4.2"
askama = "0.10.5"
convert_case = "0.4.0"
